syntax = "proto3";
package tibc.core.routing.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";

option go_package = "github.com/bianjieai/tibc-go/modules/tibc/core/26-routing/types";

// Query provides defines the gRPC querier service
service Query {
  // RoutingRules queries all routing rules.
  rpc RoutingRules(QueryRoutingRulesRequest) returns (QueryRoutingRulesResponse) {
    option (google.api.http).get =
        "/tibc/core/routing/v1beta1/routing_rules";
  }
}

// QueryRoutingRulesRequest is the request type for the
// RoutingRules RPC method
message QueryRoutingRulesRequest {
  // pagination request
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryRoutingRulesResponse defines the routing rules query response
message QueryRoutingRulesResponse {
  // rule string array
  repeated string rules = 1;
}
